# mvp-dataset

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
doc/: data-conventions.md  dataset-api.md  distributed.md  index.md  overview.md  resume.md  source-formats.md  torch-loader.md
examples/: benchmark.py  cache_demo.py  generate_demo_data.py  jsonl.py  load.py  parquet.py  tar.py  tar_only_example.py  write_demo_lance.py
examples/demo_data/: samples.jsonl
examples/demo_data/depth/: shard_000000.tar  shard_000001.tar  shard_000002.tar  shard_000003.tar
examples/demo_data/image/: shard_000000.tar  shard_000001.tar  shard_000002.tar  shard_000003.tar
src/mm_loader/: __init__.py
src/mm_loader/core/: __init__.py  types.py
src/mm_loader/distributed/: __init__.py  sharding.py
src/mm_loader/join/: __init__.py  base.py  tar_join.py
src/mm_loader/pipeline/: __init__.py  dataset.py  ops.py
src/mm_loader/sources/: __init__.py  tar.py
src/mvp_dataset/: __init__.py  convert.py  log.py
src/mvp_dataset/cache/: __init__.py  codecs.py  fingerprint.py  materialize.py  store.py
src/mvp_dataset/core/: __init__.py  context.py  dataset.py  iterator.py  mesh.py  resume.py  stages.py  subset.py  torch_compat.py  types.py
tests/: __init__.py  helpers.py  test_balance.py  test_cache.py  test_dataset_e2e.py  test_distributed.py  test_jsonl.py  test_mesh.py  test_mixed.py  test_ops.py  test_parquet.py  test_reading.py  test_resume.py  test_select.py  test_stages.py  test_subset.py  test_tar_join.py  test_tar_source.py  test_tars.py
(+78 files in other folders)
