[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "mvp-dataset"
version = "0.1.0"
description = "Maintainable and extensible multimodal data loading core."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
  { name = "MVP AI Lab" }
]
license = { file = "LICENSE" }
dependencies = [
  "pyarrow>=18.0.0",
]

[project.urls]
Homepage = "https://github.com/mvp-ai-lab/mvp-dataset"
Repository = "https://github.com/mvp-ai-lab/mvp-dataset"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
